--- a/analyse.ipynb
+++ b/analyse.ipynb
@@ -81540,13 +81540,18 @@
    "source": [
     "# Synthese\n",
     "---\n",
-    "En conclusion, on a pus observer quelque information interressante sur la donnees.\n",
-    "Tout d'abord, on peut constater le gain en popularite de netflix au fil du temps via le nombre de titre ajouter a son catalogue.\n",
-    "Il est aussi possible d'observer que certain genre on gagner ou perdu en popularite au fil du temps.\n",
-    "Une observation interessante est de voir que les films juger du genre 'classique' ce retrouve plus proche des annees 80 et 90 que de notre epoque. Cependant le nombre de film de notre epoque est bien plus elever. On pourrait peut etre en conclure que comme il y a plus de film, il est plus difficile de devenir ce qu'on pourrait appeler un \"classique\".\n",
+    "En conclusion, on a pu observer quelques informations intéressantes sur les données. Tout d'abord, on peut constater le gain en popularité de Netflix au fil du temps via le nombre de titres ajoutés à son catalogue. Il est aussi possible d'observer que certains genres ont gagné ou perdu en popularité au fil du temps. Une observation intéressante est de voir que les films jugés du genre classique se retrouvent plus proches des années 80 et 90 que de notre époque. Cependant, le nombre de films de notre époque est bien plus élevé. On pourrait peut-être en conclure que, comme il y a plus de films, il est plus difficile de devenir ce qu’on pourrait appeler un classique.\n",
     "\n",
-    "Notre dataset est cependant limite, car il nous manque les donnees apres 2020 et surtout car il nous manque de donnees sur l'auditoire. COmm"
+    "Notre dataset est cependant limité, car il nous manque les données après 2020 et surtout car il nous manque des données sur l’auditoire. Comme notre set de données est sur le catalogue, il est difficile de tirer des conclusions utiles pour mieux comprendre les habitudes des spectateurs."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2426c27d-603d-465c-9c71-af28b31f1a39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
