--- a/analyse.ipynb
+++ b/analyse.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "# Mise en place\n",
     "---\n",
-    "Importation de tout les prerequis pour l'analyse."
+    "Importation de tous les prérequis pour l’analyse."
    ]
   },
   {
@@ -50,7 +50,7 @@
    "source": [
     "# 1. Exploration du dataset\n",
     "---\n",
-    "## Information generale"
+    "## Information générale"
    ]
   },
   {
@@ -135,9 +135,10 @@
    "metadata": {},
    "source": [
     "## Observations\n",
-    "Les premiers affichages du code demontre qu'il y a de la donnees en erreurs.\n",
     "\n",
-    "Les colonnes suivantes on une ou plusieurs valeurs vide:\n",
+    "Les premiers affichages du code démontrent qu'il y a des données en erreur.\n",
+    "\n",
+    "Les colonnes suivantes ont une ou plusieurs valeurs vides :\n",
     "- director\n",
     "- cast\n",
     "- country\n",
@@ -182,7 +183,7 @@
    "id": "0ff0c062-c0a3-4cd3-985a-96b2a72876bc",
    "metadata": {},
    "source": [
-    "On peut remarquer que le nombre de `null` pour la colonne director est concentre dans le type TV Show."
+    "On peut remarquer que le nombre de null pour la colonne director est concentré dans le type TV Show."
    ]
   },
   {
@@ -192,7 +193,7 @@
    "source": [
     "# 2. Analyse de contenus\n",
     "---\n",
-    "L'analyse de contenue vise a comparer les donnees entre elle. Voir les tendances."
+    "L'analyse de contenu vise à comparer les données entre elles et à voir les tendances."
    ]
   },
   {
@@ -200,8 +201,8 @@
    "id": "462561d4-8d84-4f2d-829b-26c540e4188b",
    "metadata": {},
    "source": [
-    "## Film vs series\n",
-    "Tout d'abord, voyons les proportions de film et de series."
+    "## Film vs séries\n",
+    "Tout d'abord, voyons les proportions de film et de séries."
    ]
   },
   {
@@ -81544,14 +81545,6 @@
     "\n",
     "Notre dataset est cependant limité, car il nous manque les données après 2020 et surtout car il nous manque des données sur l’auditoire. Comme notre set de données est sur le catalogue, il est difficile de tirer des conclusions utiles pour mieux comprendre les habitudes des spectateurs."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2426c27d-603d-465c-9c71-af28b31f1a39",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
